Amarok ChangeLog
================
(C) 2002-2024 the Amarok authors.

VERSION 3.2.1
  FEATURES:
  CHANGES:
   * Support gpodder and lastfm on Qt6 builds
  BUGFIXES:

VERSION 3.2.0
  FEATURES:
  CHANGES:
  BUGFIXES:
   * Probably fix occasional crashes when clearing CompondProgressBars

VERSION 3.1.81
  FEATURES:
   * Building an experimental Qt6/KF6 Amarok version is now possible
   * Allow filtering collection by lack of tag / empty tag (BR 325317)
  CHANGES:
   * Amarok now depends on KDE Frameworks 5.108
   * Show current track context applet by default
  BUGFIXES:
   * Probably fix occasional crashes when filtering collection (BR 492406)
   * Fix context view applets on Qt6/KF6
   * Fix Ampache login on server version 5.0.0 and later (BR 496581)
   * Fix crash if Ampache login is redirected (BR 396590)

VERSION 3.1.1
  FEATURES:
  CHANGES:
   * Most of the context view QML items ported from QtControls 1 to QtControls 2
   * Default to no fadeout on pause and stop (BR 491603)

  BUGFIXES:
   * Actually show the file browser panel toolbar
   * Fix track editor autocompletions (BR 491520)
   * Ensure home icon is shown in browser breadcrumb widgets (BR 491354)

VERSION 3.1.0
  FEATURES:
  CHANGES:
  BUGFIXES:
   * Small UI and compilation fixes

VERSION 3.0.81
  FEATURES:
   * Last.fm plugin updated to use token-based authentication method and to notify
     user of session key errors (BR 414826, BR 327547)
   * Reintroducing Last.fm Similar Artists context applet - a new Amarok 3 version
   * Remember the previous destination provider when saving playlist (BR 216528)

  CHANGES:
   * Amarok now depends on KDE Frameworks 5.89.
   * Cleanup of unused code and various changes that improve Qt6 compatibility
     but shouldn't affect functionality. (n.b. Qt6 build won't succeed yet)
   * Remove old derelict openDesktop.org integrations from about dialog. This also
     removes the dependency to Attica framework.