@@ -128,5 +128,6 @@
     "X-KDE-Amarok-framework-version": 80,
     "X-KDE-Amarok-name": "gpodderService",
     "X-KDE-Amarok-rank": 100,
-    "X-KDE-Amarok-version": 1
+    "X-KDE-Amarok-version": 1,
+    "X-KDE-ConfigModule": "kcm_amarok_service_gpodder"
 }
