@@ -130,5 +130,6 @@
     "X-KDE-Amarok-framework-version": 80,
     "X-KDE-Amarok-name": "MagnatuneStore",
     "X-KDE-Amarok-rank": 100,
-    "X-KDE-Amarok-version": 1
+    "X-KDE-Amarok-version": 1,
+    "X-KDE-ConfigModule": "kcm_amarok_service_magnatunestore"
 }
