@@ -7,6 +7,7 @@ VERSION 3.2.1
   CHANGES:
    * Support gpodder and lastfm on Qt6 builds
   BUGFIXES:
+   * Display settings for Internet services on Qt6 builds
 
 VERSION 3.2.0
   FEATURES:
